--- a/les9/index9.html
+++ b/les9/index9.html
@@ -468,12 +468,10 @@
     </div>
 </div>
 <div id="mobileNews">
-    <div style="margin-left: 380px;"><b>НОВОСТИ</b></div>
-    <div>
-        <img src="imag/poloska.png" style="max-width: 100%;"/>
-    </div>
-    <div style="display: flex; flex-direction: row; justify-content: center">
-        <div style="margin-right: 50px;max-width: 285px;">
+    <div><b>НОВОСТИ</b></div>
+    <br/>
+    <div style="display: flex; flex-direction: column; justify-content: center">
+        <div style="margin-left: 25px;max-width: 285px;">
             <div style="background: black; color: white; display: flex; justify-content: center; width: 106px; height: 20px;">
                 3 ноября
             </div>
@@ -539,7 +537,7 @@
 <br/>
 <br/>
 <br/>
-<div style="width: 100%;height: 408px;left: 0px;top: 2554px;background: #0C1A2A;display: flex; flex-direction: row;">
+<div id="siteFooter" style="width: 100%;height: 408px;left: 0px;top: 2554px;background: #0C1A2A;display: flex; flex-direction: row;">
     <br/>
     <div style="margin-left: 360px; color:#868DAC">
         <b>КАТАЛОГ</b>
@@ -628,6 +626,145 @@
     </div>
     <div style="margin-left: 60px; color:#868DAC">
         <div style="display: flex">
+            <div>
+                <b>КОНТАКТЫ</b>
+                <div style="color: #FBFBFC">
+                    +7 383 291 92 86
+                    <br/>
+                    info@avt-zap.ru
+                </div>
+            </div>
+            <div style="margin-left: 10px;">
+                <b>АДРЕС</b>
+                <div style="color: #FBFBFC">
+                    г. Новосибирск,
+                    <br/>
+                    ул. Планировочная, 5, офис 105
+                </div>
+            </div>
+        </div>
+        <div style="color:#868DAC">
+            <br/>
+            <br/>
+            Мы онлайн, воспользуйтесь <span style="color: white">Форма обратной связи</span>
+            <br/>
+            <br/>
+            Подпишитесь на нашу расслыку и
+            <br/>
+            вы первыми узнаете о скидках и акциях
+            <br/>
+            <br/>
+        </div>
+        <div style="display: flex">
+            <input style="color: #ADBDD1; width: 300px" placeholder="Введите ваш email"/>
+            <button id="emailSendButton">Подписаться</button>
+        </div>
+        <br/>
+        <div class="socialRefs" style="margin-left: 250px;display: flex">
+            <img src="imag/Vecto1.png" height="20" width="11"/>
+            <img src="imag/Vecto2.png" height="20" width="22"/>
+            <img src="imag/Vecto3.png" height="18" width="20"/>
+            <img src="imag/Vecto4.png" height="26" width="26"/>
+        </div>
+    </div>
+    <!--    <div>-->
+    <!--        <div style="color:#868DAC">Мы онлайн, воспользуйтесь</div>-->
+    <!--        <p style="color: white">Форма обратной связи</p>-->
+    <!--        <div style="color:#868DAC">Подпишитесь на нашу расслыку и-->
+    <!--            вы первыми узнаете о скидках и акциях</div>-->
+    <!--        <div></div>-->
+    <!--        <div></div>-->
+    <!--    </div>-->
+</div>
+<div id="mobileFooter" style="width: 380%;height: 1800px;left: 0px;top: 2554px;background: #0C1A2A;display: flex; flex-direction: column;">
+    <br/>
+    <div style="margin-left: 20px; color:#868DAC">
+        <b>КАТАЛОГ</b>
+        <br/>
+        <br/>
+        <div style="color: #FBFBFC">
+            Каталог запчастей
+            <br/>
+            <br/>
+            Масла
+            <br/>
+            <br/>
+            Фильтра
+            <br/>
+            <br/>
+            Радиаторы
+            <br/>
+            <br/>
+            Sonnax
+            <br/>
+            <br/>
+            Manual
+            <br/>
+            <br/>
+            Новинки
+            <br/>
+            <br/>
+            Акции
+            <br/>
+        </div>
+    </div>
+    <br/>
+    <div style="margin-left: 20px; color:#868DAC">
+        <b>РУБРИКАТОР</b>
+        <br/>
+        <br/>
+        <div style="color: #FBFBFC">
+            Доставка
+            <br/>
+            <br/>
+            Оплата
+            <br/>
+            <br/>
+            Гарантия
+            <br/>
+            <br/>
+            Новости
+            <br/>
+            <br/>
+            Журнал
+            <br/>
+            <br/>
+            О магазине
+            <br/>
+            <br/>
+            Контактная информация
+            <br/>
+        </div>
+    </div>
+    <br/>
+    <div style="margin-left: 20px; color:#868DAC">
+        <b>ИНФОРМАЦИЯ</b>
+        <br/>
+        <br/>
+        <div style="color: #FBFBFC">
+            Пользовательское соглашение
+            об использовании персональных данных
+            <br/>
+            <br/>
+            Политика конфиденциальности
+            <br/>
+            <br/>
+            Соглашение на рассылку
+            рекламных материалов
+            <br/>
+            <br/>
+            Политика возвратов
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            Мы принимаем
+            <br/>
+            <img src="imag/visa.png" height="45" width="114"/>
+        </div>
+    </div>
+    <div style="margin-left: 20px; color:#868DAC">
+        <div style="display: flex; flex-direction: column;">
             <div>
                 <b>КОНТАКТЫ</b>
                 <div style="color: #FBFBFC">
