--- a/les9/index9.html
+++ b/les9/index9.html
@@ -537,146 +537,149 @@
 <br/>
 <br/>
 <br/>
-<div id="siteFooter" style="width: 100%;height: 408px;left: 0px;top: 2554px;background: #0C1A2A;display: flex; flex-direction: row;">
-    <br/>
-    <div style="margin-left: 360px; color:#868DAC">
-        <b>КАТАЛОГ</b>
+<div id="siteFooter">
+    <div style="width: 100%;height: 408px;left: 0px;top: 2554px;background: #0C1A2A;display: flex; flex-direction: row;">
         <br/>
-        <br/>
-        <div style="color: #FBFBFC">
-            Каталог запчастей
+        <div style="margin-left: 360px; color:#868DAC">
+            <b>КАТАЛОГ</b>
             <br/>
             <br/>
-            Масла
-            <br/>
-            <br/>
-            Фильтра
-            <br/>
-            <br/>
-            Радиаторы
-            <br/>
-            <br/>
-            Sonnax
-            <br/>
-            <br/>
-            Manual
-            <br/>
-            <br/>
-            Новинки
-            <br/>
-            <br/>
-            Акции
-            <br/>
-        </div>
-    </div>
-    <br/>
-    <div style="margin-left: 180px; color:#868DAC">
-        <b>РУБРИКАТОР</b>
-        <br/>
-        <br/>
-        <div style="color: #FBFBFC">
-            Доставка
-            <br/>
-            <br/>
-            Оплата
-            <br/>
-            <br/>
-            Гарантия
-            <br/>
-            <br/>
-            Новости
-            <br/>
-            <br/>
-            Журнал
-            <br/>
-            <br/>
-            О магазине
-            <br/>
-            <br/>
-            Контактная информация
-            <br/>
-        </div>
-    </div>
-    <br/>
-    <div style="margin-left: 180px; color:#868DAC">
-        <b>ИНФОРМАЦИЯ</b>
-        <br/>
-        <br/>
-        <div style="color: #FBFBFC">
-            Пользовательское соглашение
-            об использовании персональных данных
-            <br/>
-            <br/>
-            Политика конфиденциальности
-            <br/>
-            <br/>
-            Соглашение на рассылку
-            рекламных материалов
-            <br/>
-            <br/>
-            Политика возвратов
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            Мы принимаем
-            <br/>
-            <img src="imag/visa.png" height="45" width="114"/>
-        </div>
-    </div>
-    <div style="margin-left: 60px; color:#868DAC">
-        <div style="display: flex">
-            <div>
-                <b>КОНТАКТЫ</b>
-                <div style="color: #FBFBFC">
-                    +7 383 291 92 86
-                    <br/>
-                    info@avt-zap.ru
-                </div>
-            </div>
-            <div style="margin-left: 10px;">
-                <b>АДРЕС</b>
-                <div style="color: #FBFBFC">
-                    г. Новосибирск,
-                    <br/>
-                    ул. Планировочная, 5, офис 105
-                </div>
+            <div style="color: #FBFBFC">
+                Каталог запчастей
+                <br/>
+                <br/>
+                Масла
+                <br/>
+                <br/>
+                Фильтра
+                <br/>
+                <br/>
+                Радиаторы
+                <br/>
+                <br/>
+                Sonnax
+                <br/>
+                <br/>
+                Manual
+                <br/>
+                <br/>
+                Новинки
+                <br/>
+                <br/>
+                Акции
+                <br/>
             </div>
         </div>
-        <div style="color:#868DAC">
+        <br/>
+        <div style="margin-left: 180px; color:#868DAC">
+            <b>РУБРИКАТОР</b>
             <br/>
             <br/>
-            Мы онлайн, воспользуйтесь <span style="color: white">Форма обратной связи</span>
-            <br/>
-            <br/>
-            Подпишитесь на нашу расслыку и
-            <br/>
-            вы первыми узнаете о скидках и акциях
-            <br/>
-            <br/>
-        </div>
-        <div style="display: flex">
-            <input style="color: #ADBDD1; width: 300px" placeholder="Введите ваш email"/>
-            <button id="emailSendButton">Подписаться</button>
+            <div style="color: #FBFBFC">
+                Доставка
+                <br/>
+                <br/>
+                Оплата
+                <br/>
+                <br/>
+                Гарантия
+                <br/>
+                <br/>
+                Новости
+                <br/>
+                <br/>
+                Журнал
+                <br/>
+                <br/>
+                О магазине
+                <br/>
+                <br/>
+                Контактная информация
+                <br/>
+            </div>
         </div>
         <br/>
-        <div class="socialRefs" style="margin-left: 250px;display: flex">
-            <img src="imag/Vecto1.png" height="20" width="11"/>
-            <img src="imag/Vecto2.png" height="20" width="22"/>
-            <img src="imag/Vecto3.png" height="18" width="20"/>
-            <img src="imag/Vecto4.png" height="26" width="26"/>
+        <div style="margin-left: 180px; color:#868DAC">
+            <b>ИНФОРМАЦИЯ</b>
+            <br/>
+            <br/>
+            <div style="color: #FBFBFC">
+                Пользовательское соглашение
+                об использовании персональных данных
+                <br/>
+                <br/>
+                Политика конфиденциальности
+                <br/>
+                <br/>
+                Соглашение на рассылку
+                рекламных материалов
+                <br/>
+                <br/>
+                Политика возвратов
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                Мы принимаем
+                <br/>
+                <img src="imag/visa.png" height="45" width="114"/>
+            </div>
         </div>
+        <div style="margin-left: 60px; color:#868DAC">
+            <div style="display: flex">
+                <div>
+                    <b>КОНТАКТЫ</b>
+                    <div style="color: #FBFBFC">
+                        +7 383 291 92 86
+                        <br/>
+                        info@avt-zap.ru
+                    </div>
+                </div>
+                <div style="margin-left: 10px;">
+                    <b>АДРЕС</b>
+                    <div style="color: #FBFBFC">
+                        г. Новосибирск,
+                        <br/>
+                        ул. Планировочная, 5, офис 105
+                    </div>
+                </div>
+            </div>
+            <div style="color:#868DAC">
+                <br/>
+                <br/>
+                Мы онлайн, воспользуйтесь <span style="color: white">Форма обратной связи</span>
+                <br/>
+                <br/>
+                Подпишитесь на нашу расслыку и
+                <br/>
+                вы первыми узнаете о скидках и акциях
+                <br/>
+                <br/>
+            </div>
+            <div style="display: flex">
+                <input style="color: #ADBDD1; width: 300px" placeholder="Введите ваш email"/>
+                <button id="emailSendButton">Подписаться</button>
+            </div>
+            <br/>
+            <div class="socialRefs" style="margin-left: 250px;display: flex">
+                <img src="imag/Vecto1.png" height="20" width="11"/>
+                <img src="imag/Vecto2.png" height="20" width="22"/>
+                <img src="imag/Vecto3.png" height="18" width="20"/>
+                <img src="imag/Vecto4.png" height="26" width="26"/>
+            </div>
+        </div>
+        <!--    <div>-->
+        <!--        <div style="color:#868DAC">Мы онлайн, воспользуйтесь</div>-->
+        <!--        <p style="color: white">Форма обратной связи</p>-->
+        <!--        <div style="color:#868DAC">Подпишитесь на нашу расслыку и-->
+        <!--            вы первыми узнаете о скидках и акциях</div>-->
+        <!--        <div></div>-->
+        <!--        <div></div>-->
+        <!--    </div>-->
     </div>
-    <!--    <div>-->
-    <!--        <div style="color:#868DAC">Мы онлайн, воспользуйтесь</div>-->
-    <!--        <p style="color: white">Форма обратной связи</p>-->
-    <!--        <div style="color:#868DAC">Подпишитесь на нашу расслыку и-->
-    <!--            вы первыми узнаете о скидках и акциях</div>-->
-    <!--        <div></div>-->
-    <!--        <div></div>-->
-    <!--    </div>-->
 </div>
-<div id="mobileFooter" style="width: 380%;height: 1800px;left: 0px;top: 2554px;background: #0C1A2A;display: flex; flex-direction: column;">
+<div id="mobileFooter"
+     style="width: 380%;height: 1800px;left: 0px;top: 2554px;background: #0C1A2A;display: flex; flex-direction: column;">
     <br/>
     <div style="margin-left: 20px; color:#868DAC">
         <b>КАТАЛОГ</b>
@@ -743,14 +746,14 @@
         <br/>
         <div style="color: #FBFBFC">
             Пользовательское соглашение
-            об использовании персональных данных
+            об <br/> использовании персональных данных
             <br/>
             <br/>
             Политика конфиденциальности
             <br/>
             <br/>
             Соглашение на рассылку
-            рекламных материалов
+            рекламных <br/> материалов
             <br/>
             <br/>
             Политика возвратов
@@ -785,7 +788,8 @@
         <div style="color:#868DAC">
             <br/>
             <br/>
-            Мы онлайн, воспользуйтесь <span style="color: white">Форма обратной связи</span>
+            Мы онлайн, воспользуйтесь <br/>
+            <span style="color: white">Форма обратной связи</span>
             <br/>
             <br/>
             Подпишитесь на нашу расслыку и
@@ -795,11 +799,11 @@
             <br/>
         </div>
         <div style="display: flex">
-            <input style="color: #ADBDD1; width: 300px" placeholder="Введите ваш email"/>
-            <button id="emailSendButton">Подписаться</button>
+            <input style="color: #ADBDD1; width: 250px" placeholder="Введите ваш email"/>
+            <button id="mobileEmailSendButton">Подписаться</button>
         </div>
         <br/>
-        <div class="socialRefs" style="margin-left: 250px;display: flex">
+        <div class="socialRefs" style="margin-left: 150px;display: flex">
             <img src="imag/Vecto1.png" height="20" width="11"/>
             <img src="imag/Vecto2.png" height="20" width="22"/>
             <img src="imag/Vecto3.png" height="18" width="20"/>
